--- a/part1/1.1 - 1.5 -- courseInfo/package.json
+++ b/part1/1.1 - 1.5 -- courseInfo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "1-1---courseinfo",
+  "name": "1-1---1-5----courseinfo",
   "private": true,
   "version": "0.0.0",
   "type": "module",
